# ledger-app-symbol

./: .gitignore  Makefile  README.md  test_symbol.py
.github/workflows/: ci-workflow.yml
doc/: transactions_schema.md
fuzzing/: .gitignore  build.sh  coverage.sh  run.sh
src/: base32.c  base32.h  buffer.c  buffer.h  common.h  crypto.c  crypto.h  io.c  io.h  limitations.h  main.c  nemHelpers.c  nemHelpers.h  types.h
src/apdu/: constants.h  entry.c  entry.h  global.c  global.h  parser.c  parser.h
src/apdu/messages/: get_app_configuration.c  get_app_configuration.h  get_public_key.c  get_public_key.h  sign_transaction.c  sign_transaction.h
src/transaction/: transaction.c  transaction.h
src/ui/: ux.h
src/ui/address/: address_ui.c  address_ui.h
src/ui/main/: idle_menu.c  idle_menu.h
src/ui/other/: loading.c  loading.h
src/ui/transaction/: review_menu.c  review_menu.h
src/xym/: xym_helpers.c  xym_helpers.h
src/xym/format/: fields.c  fields.h  format.c  format.h  printers.c  printers.h  readers.c  readers.h
src/xym/parse/: xym_parse.c  xym_parse.h
tests/: CMakeLists.txt  fuzz_xym.c  test_bip32_path_extraction.c  test_transaction_parser.c
tests/testcases/: account_address_restriction.raw  account_metadata_transaction.raw  account_mosaic_restriction.raw  account_multisig.raw  account_operation_restriction.raw  cosignature_transaction.raw  create_mosaic.raw  create_namespace.raw  create_sub_namespace.raw  delegated_harvesting.raw  hash_lock_account_multisig.raw  hash_lock_multisig_create_namespace.raw  link_namespace_to_address.raw  link_namespace_to_mosaic.raw  mosaic_metadata_transaction.raw  multisig_create_mosaic.raw  multisig_create_namespace.raw  multisig_create_sub_namespace.raw  multisig_transfer_transaction.raw  namespace_metadata_transaction.raw  persistent_harvesting_delegation_transfer.raw  supply_change_mosaic.raw  transfer_transaction.raw  transfer_transaction_not_xym.raw
